objects/BLN_Sponsorships__c.object
<CustomObject>
    <fields>
        <fullName>Display_Order__c</fullName>
        <label>Display Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Logo_Size__c</fullName>
        <label>Logo Size</label>
        <picklist>
            <picklistValues>
                <fullName>Large</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Small</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sponsorship_Category__c</fullName>
        <label>Sponsorship Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ticket_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ticket ID</label>
        <referenceTo>Ticket__c</referenceTo>
        <relationshipLabel>BLN Sponsorships</relationshipLabel>
        <relationshipName>BLN_Sponsorships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Visibility__c</fullName>
        <label>Visibility</label>
        <picklist>
            <picklistValues>
                <fullName>Public</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Private</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>BLN Sponsorship</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Ticket_ID__c</columns>
        <columns>Sponsorship_Category__c</columns>
        <columns>Display_Order__c</columns>
        <columns>Logo_Size__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>BLN Sponsorships Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BLN Sponsorships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>